@startuml

class Main {
  +main(args: String[]): void
}

class Owner {
  -name: String
  -pet: Pet
  +visitVet(vet: Vet): void
}

class Pet {
  -name: String
  -age: int
  +displayPetInfo(): void
}

class PetHealthCard {
  +printCard(ownerName: String): void
}

class Vet {
  -name: String
  -pets: List<Pet>
  +addPet(pet: Pet): void
  +treatPet(pet: Pet): void
}

class HealthReport {
  +print(): void
}

' --- Зв'язки ---
Main --> Owner
Main --> Vet
Main ..> Pet : creates

Owner *-- Pet : composition
Vet o-- Pet : aggregation
Owner --> Vet : association
Owner ..> HealthReport : <<local class>>
Owner ..> PetHealthCard : <<static nested>>

Pet ..> Owner : inner class

@enduml
